After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637260 - G_BEGIN_DECLS and G_END_DECLS missing in a number of include files
G_BEGIN_DECLS and G_END_DECLS missing in a number of include files
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-gl
git master
Other All
: Normal normal
: 0.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-12-14 21:37 UTC by Blaise Gassend
Modified: 2010-12-15 00:01 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Blaise Gassend 2010-12-14 21:37:29 UTC
In order for a gstreamer header to work with C++ its declarations must be in an extern "C" block. This is usually done using G_BEGIN_DECLS and G_END_DECLS. A number of gst-plugins-gl headers are missing these macros, and hence the user has to manually do the extern "C" block.

The offending headers are:

blaise@bnl: /wg/stor5/blaise/temp/gst-plugins-gl/gst-libs/gst/gl $ find -name \*.h|xargs grep DECL -vl
./gstglmixerpad.h
./gstglwindow.h
./gstglmixer.h
./gstgldisplay.h
./gstglshader.h
./gstglbuffer.h
./gstglfilter.h
./gstgles2.h
Comment 1 Tim-Philipp Müller 2010-12-15 00:01:43 UTC
Committed this:

 commit 6d9bfd30a275883d09ac3acb15182b39853754ed
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Tue Dec 14 23:56:55 2010 +0000

    Add some more G_{BEGIN,END}_DECLS to public headers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=637260


Note:

tpm@zingle:~/gst/git/gst-plugins-gl/gst-libs/gst/gl$ find -name '*h' | xargs grep -v -l G_BEGIN_DECLS
./gstglmixer.h
./gstglshader.h
./gstglmixerpad.h
./gstglbuffer.h
./gstgldisplay.h
./gstglwindow.h
./gstglfilter.h
./gstgles2.h

tpm@zingle:~/gst/git/gst-plugins-gl/gst-libs/gst/gl$ grep G_BEGIN_DECLS *h
gstglbuffer.h:G_BEGIN_DECLS
gstgldisplay.h:G_BEGIN_DECLS
gstgles2.h:G_BEGIN_DECLS
gstglfilter.h:G_BEGIN_DECLS
gstglmixer.h:G_BEGIN_DECLS
gstglmixerpad.h:G_BEGIN_DECLS
gstglshader.h:G_BEGIN_DECLS
gstglwindow.h:G_BEGIN_DECLS