[463/906] Add some more G_{BEGIN,END}_DECLS to public headers

https://bugzilla.gnome.org/show_bug.cgi?id=637260